# toi-duman

./: .gitignore
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260320_000001_create_users_table.py  20260320_000002_create_events_table.py  20260320_000003_create_guests_table.py  20260320_000004_create_orders_table.py  20260320_000005_create_reviews_table.py  20260320_000006_change_users_id_to_varchar.py  20260320_000007_add_user_email_verification_fields.py  20260321_000008_add_on_update_cascade_for_user_foreign_keys.py  20260321_000009_split_user_prefix_from_id.py  20260321_000010_add_user_password_reset_fields.py  20260321_000011_change_orders_id_to_varchar.py  20260321_000012_create_event_claims_table.py  20260321_000013_add_is_created_by_admin_to_events.py  20260323_000014_remove_unused_modules.py  20260323_000015_remove_guest_count_and_comment.py  20260323_000016_create_templates_table.py  20260325_000017_update_templates_table_shape.py  20260325_000018_add_type_to_templates.py  20260325_000019_add_template_id_to_events.py  20260417_000020_restructure_events_drop_templates.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py
backend/app/core/: config.py  id_generator.py  security.py  user_identity.py
backend/app/db/: session.py
backend/app/models/: __init__.py  event.py  event_claim.py  guest.py  order.py  review.py  template.py  user.py
backend/app/repositories/: __init__.py  base.py  event_claim_repository.py  event_repository.py  guest_repository.py  order_repository.py  (+3 more)
(+237 files in other folders)
